fix: feito correção em checkoutpart2